--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   --brand:#ffcc00;
   --grass1:#0f8a3b; --grass2:#0c6f31;
   --digit:#ff3b30; --digitGlow:rgba(255,80,60,.55);
+
+  /* ⬇️ 這三個參數用來控制“紅框”區域（球移動的範圍） */
+  --zone-top: 42%;      /* 區塊頂端位置（相對 .field 高度） */
+  --zone-width: 84%;    /* 區塊寬度（相對 .field 寬度） */
+  --zone-height: 14%;   /* 區塊高度（相對 .field 高度） */
 }
 
 /* 草皮背景 */
@@ -39,53 +44,59 @@ html,body{
 /* 球門容器（等比例） */
 .goal-wrap{
   position:absolute; top:10%; left:50%; transform:translateX(-50%);
-  width:80%;
-  aspect-ratio: 3 / 1;      /* 門的長寬比固定，所有子元素都依此縮放 */
-  pointer-events:none;      /* 不擋按鈕 */
+  width:80%; aspect-ratio: 3 / 1; pointer-events:none;
 }
 .goal{ width:100%; height:100%; display:block; }
 
-/* 守門員（高度跟球門一致縮放；左右在門內移動） */
+/* 守門員（等高比例、只在球門內左右移動） */
 .goalie{
-  position:absolute;
-  bottom:5%;
-  left:50%;                 /* 基準：置中 */
-  height:85%;               /* 跟門高的比例（你可改 75~90%） */
-  transform:translateX(-50%);
+  position:absolute; bottom:5%; left:50%;
+  height:85%; transform:translateX(-50%);
   animation:goalie-move 2.2s ease-in-out infinite alternate;
   animation-play-state:paused;
   transition:transform .5s ease;
   z-index:12;
 }
 @keyframes goalie-move{
-  0%   { left: 18%; }       /* 門內左側 */
-  100% { left: 82%; }       /* 門內右側 */
+  0%   { left: 18%; }
+  100% { left: 82%; }
 }
 .goalie.running{ animation-play-state:running; }
 .goalie.big{ transform:translateX(-50%) translateY(-5%) scale(1.2); z-index:13; }
 
-/* 足球（同樣依門高縮放；左右在門內移動） */
-.ball-track{
+/* 🔴 球“紅框”區域（球只在這裡左右移動） */
+.ball-zone{
   position:absolute;
-  bottom:0%;
-  left:50%;
-  height:60%;               /* 球的高度比例（相對門高） */
-  transform:translateX(-50%);
-  animation:ball-move 2s linear infinite alternate;
-  animation-play-state:paused;
-  z-index:20;               /* 永遠在守門員上層 */
+  top: var(--zone-top);
+  left: 50%;
+  width: var(--zone-width);
+  height: var(--zone-height);
+  transform: translateX(-50%);
+  pointer-events:none;
+  /* 如果要看到實際範圍，用下面一行打開（除錯用）： */
+  /* outline: 3px solid rgba(255,0,0,.6); border-radius:8px; */
+}
+
+/* 足球（依紅框等比例，左右在紅框內移動） */
+.ball-track{
+  position:absolute; bottom:0; left:0;
+  height: 100%;                    /* 球高 = 紅框高（你也可改 80%） */
+  transform: translateX(0);
+  animation: ball-move 2s linear infinite alternate;
+  animation-play-state: paused;
+  z-index:20;                      /* 永遠在守門員上層 */
 }
 @keyframes ball-move{
-  0%   { left: 15%; }
-  100% { left: 85%; }
+  0%   { left: 0%;  }
+  100% { left: 92%; }              /* 92% 讓球不會超出紅框右邊 */
 }
 .ball-track.running{ animation-play-state:running; }
-.ball-sprite{ position:absolute; inset:0; transform:translate(0,0); }
+.ball-sprite{ position:absolute; inset:0; display:flex; align-items:flex-end; justify-content:center; }
 .ball-sprite img{ height:100%; width:auto; display:block; }
 
 /* 文案 */
 h2{ margin-top:8px; font-size:clamp(22px,5vw,32px); }
-p{ font-size:clamp(14px,3.6vw,18px); opacity:.9; }
+p{  font-size:clamp(14px,3.6vw,18px); opacity:.9; }
 
 /* 計時板 */
 .board{ margin:10px auto; width:80%; background:#111; padding:14px; border-radius:12px; }
@@ -127,8 +138,7 @@ p{ font-size:clamp(14px,3.6vw,18px); opacity:.9; }
 .modal{
   position:fixed; inset:0; display:none;
   align-items:center; justify-content:center;
-  background:rgba(0,0,0,.55);
-  z-index: 10000;           /* ⬅︎ 提高層級 */
+  background:rgba(0,0,0,.55); z-index:10000;
 }
 .modal.show{ display:flex; }
 .modal-card{
@@ -137,12 +147,9 @@ p{ font-size:clamp(14px,3.6vw,18px); opacity:.9; }
   box-shadow:0 20px 40px rgba(0,0,0,.35);
 }
 .modal-card h3{ margin:0 0 8px; font-size:clamp(18px,4.6vw,24px); }
-.modal-card p{ margin:0 0 12px; font-size:clamp(14px,3.8vw,18px); }
+.modal-card p{  margin:0 0 12px; font-size:clamp(14px,3.8vw,18px); }
 .qr{ width:100%; max-width:320px; display:block; margin:0 auto 10px; }
-.close{
-  margin-top:8px; background:var(--brand); color:#111;
-  font-weight:900; border:0; border-radius:12px; padding:10px 16px; cursor:pointer;
-}
+.close{ margin-top:8px; background:var(--brand); color:#111; font-weight:900; border:0; border-radius:12px; padding:10px 16px; cursor:pointer; }
 </style>
 </head>
 <body>
@@ -152,8 +159,8 @@ p{ font-size:clamp(14px,3.6vw,18px); opacity:.9; }
     <div class="goal-banner" id="banner">GOAL!!<br><span style="color:#ffb700;">挑戰成功！</span></div>
 
     <div class="field">
-      <div class="goal-wrap" id="goalWrap">
-        <!-- 球門網格 -->
+      <!-- 球門（守門員在裡面） -->
+      <div class="goal-wrap">
         <svg class="goal" viewBox="0 0 640 220">
           <defs><pattern id="net" width="16" height="16" patternUnits="userSpaceOnUse">
             <path d="M0 8 H16 M8 0 V16" stroke="rgba(255,255,255,.35)" stroke-width="1"/>
@@ -161,9 +168,11 @@ p{ font-size:clamp(14px,3.6vw,18px); opacity:.9; }
           <rect x="60" y="24" width="520" height="160" fill="url(#net)" stroke="rgba(255,255,255,.6)" stroke-width="6" rx="8"/>
           <rect x="40" y="12" width="560" height="188" fill="none" stroke="rgba(255,255,255,.85)" stroke-width="10" rx="14"/>
         </svg>
-
-        <!-- 守門員 & 足球都放在球門容器內，等比例縮放 -->
         <img id="goalie" class="goalie" src="goalie.png" alt="goalie">
+      </div>
+
+      <!-- ⬇️ 足球的“紅框區域” -->
+      <div class="ball-zone">
         <div id="ballTrack" class="ball-track">
           <div id="ball" class="ball-sprite"><img src="soccer.png" alt="ball"></div>
         </div>
@@ -215,7 +224,7 @@ p{ font-size:clamp(14px,3.6vw,18px); opacity:.9; }
   const pad2=n=>n.toString().padStart(2,'0');
   const fmtSSCC=ms=>{const t=ms/1000,s=Math.floor(t),cs=Math.floor((t-s)*100);return`${pad2(s)}:${pad2(cs)}`};
 
-  /* 射門：以當前位置 → 球門內部 */
+  // 射門：以當前位置 → 球門內部
   function kickToGoal(){
     const b = ballEl.getBoundingClientRect();
     const g = goalSvg.getBoundingClientRect();
